[gd_scene load_steps=2 format=3 uid="uid://ctcjena4x8kr0"]

[ext_resource type="Script" uid="uid://ccpfrak6yl0l" path="res://src/aura/aura.gd" id="1_itduv"]

[node name="Aura" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_itduv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
